# cardio-i

ExtractImagesPolylines/: CMakeLists.txt  ExtractImagesPolylines.cpp
ExtractImagesPolylines/.ipynb_checkpoints/: HolterAf-attention-dev-checkpoint.ipynb
ExtractImagesPolylines/HolterDataManager/: HolterData.cpp  HolterData.h  HolterDataManager.cpp  HolterDataManager.h  build.txt
ExtractImagesPolylines/qrs_detector/cpp/: CMakeLists.txt  QRSdetector.cpp  QRSdetector.h
ExtractImagesPolylines/qrs_detector/cpp/tests/: CMakeLists.txt  main.cpp
ExtractImagesPolylines/qrs_detector/python/: MyQRSDetectorOffline.py  execute.py
dwt_sample/: CMakeLists.txt  dwt_sample.cpp
dwt_sample/wavelet/: wauxlib.lib  wavelib.lib
